--- a/html/css/layout-inicio.css
+++ b/html/css/layout-inicio.css
@@ -358,6 +358,9 @@ ol p.reclamacoes{
 }
 
 @media screen and (-webkit-min-device-pixel-ratio : 1.5), (min-device-pixel-ratio : 1.5) {
+	header a.ajuda{
+		background-image: url(../imagens/fundo-ajuda@2x.png);
+	}
 	h1{
 		background-image: url(../imagens/logo-principal@2x.png);
 	}
