--- a/html/css/ie.css
+++ b/html/css/ie.css
@@ -1,33 +1,41 @@
 .divisao:before{
 	border: none;
 	background: url(../imagens/detalhe-filtros-ie.jpg) no-repeat center bottom;
+	width: 26px;
+	height: 19px;
+	margin: 0 0 0 -13px;
+	bottom: -15px;
+}
+li.divisao:before{
+	bottom: -13px;
 }
 canvas{
 	position: absolute;
 	left: 50%;
 	margin-left: -75px;
+	margin-top: 70px;
 }
 table.circular{
 	position: absolute;
 	width: 100%;
-	top: 230px
+	top: 290px;
+}
+.circular caption{
+	position: absolute;
+	top: -215px;
 }
 .idade tr{
 	position: relative;
 	padding: 0;
 	width: 25%;
 	margin: 0;
-	background-image: url(../imagens/fundo-grafico-vertical.png); 
-	background-repeat: no-repeat;
-	background-position: center 20px;
-	background-size: 70% 100%;
 }
 .idade td.valor{ 
 	display: block; 
 	position: absolute;
 	left: 0; 
 	top: 0; 
-	height: 102px;
+	height: 122px;
 	width: 96px;
 	padding: 0 0 0 0;
 }
@@ -35,7 +43,6 @@ table.circular{
 	display: block; 
 	position: absolute; 
 	left: 0; 
-	top: 102px;
 	width: 100%;
 	background-color: #FFF;
 }
@@ -43,15 +50,20 @@ table.circular{
 	border-left: none;
 	border-bottom: 10px solid #FFF;
 }
-.horizontal tr:first-child{
+
+#graficoproblema tr, #graficoassunto tr{
 	border-left: none;
 }
-.horizontal tr:first-child td:first-child{
-    border-left: 5px solid #D77B56;
-    
+
+#graficoproblema tr td:first-child{
+    border-left: 5px solid #FCAF17;
 }
+
+#graficoassunto tr td:first-child{
+    border-left: 5px solid #3C5C9A;
+}
+
 .horizontal tr td:first-child{
     background-color: #EEEEEE;
-    border-left: 5px solid #BE5F63;
     padding: 0 0 0 5px;
 }
