--- a/html/css/layout-inicio.css
+++ b/html/css/layout-inicio.css
@@ -149,7 +149,8 @@ button{
 	z-index: 2;
 }
 
-div.conteudo{
+.conteudo{
+	display: block;
 	padding: 80px 0 0 0;
 	width: 960px;
 	margin: 0 auto;
@@ -173,7 +174,7 @@ section{
 	margin: 0 0 35px 0;
 }
 
-div section:first-child{
+section:first-child{
 	float: left;
 }
 
@@ -272,10 +273,15 @@ ol p.reclamacoes{
 	height: 38px;
 	line-height: 37px;
 	border-radius: 5px;
+	position: relative;
 }
 
 .paginacao a span{
-	display: inline-block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	display: none;
+	display: block;
 	text-indent: -9999px;
 }
 
@@ -400,7 +406,7 @@ article.ajuda li:before{
 		width: 98%;
 	}
 
-	div.conteudo{
+	.conteudo{
 		width: 98%;
 	}
 
@@ -476,7 +482,7 @@ article.ajuda li:before{
 		margin: -39px 1.3% 0 0;
 	}
 
-	div.conteudo {
+	.conteudo {
 	    padding: 20px 0 0 0;
 	}
 
