--- a/html/css/layout-inicio-min.css
+++ b/html/css/layout-inicio-min.css
@@ -1,101 +1,1 @@
-html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{border:0;font-size:100%;font:inherit;vertical-align:baseline;margin:0;padding:0}
-article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}
-body{line-height:1;font-family:"Maven Pro", sans-serif;font-size:10px}
-ol,ul{list-style:none}
-blockquote,q{quotes:none}
-blockquote:before,blockquote:after,q:before,q:after{content:none}
-table{border-collapse:collapse;border-spacing:0}
-header{background-image:url(../imagens/fundo-topo.jpg);background-repeat:repeat-x;background-position:0 0;padding:0 0 40px}
-.resultados header{padding:0 0 50px}
-header h1,header a.logo{display:block;background-image:url(../imagens/logo-principal.png);background-repeat:no-repeat;background-position:0 5px;background-size:384px 86px;height:96px;text-indent:-9999px}
-h1 a{display:block;width:384px;height:96px}
-header p{width:760px;text-align:center;font-size:2em;color:#777;line-height:120%;margin:0 auto;padding:30px 0}
-header a.ajuda{display:block;width:50px;height:96px;background-image:url(../imagens/fundo-ajuda.png);background-repeat:no-repeat;background-position:center center;background-size:50px 50px;position:absolute;right:0;top:0;text-indent:-9999px}
-.wrap{width:1200px;position:relative;margin:0 auto}
-form.wrap{width:1180px;border:10px solid #FFF;border-radius:10px;margin:-40px auto 0}
-label{display:block;text-indent:-9999px;height:0}
-input{border:2px solid #4666A3;border-radius:10px;display:block;width:1176px;height:58px;font-size:2.8em;color:#3B5B9E;text-align:center;background-color:#FFF;position:relative;z-index:1;margin:0 auto;padding:0}
-button{float:right;height:50px;border:none;background:#FBB100;color:#FFF;font-size:2.4em;border-radius:7px;position:relative;z-index:2;margin:-56px 6px 0 0;padding:0 15px}
-.conteudo{display:block;width:960px;margin:0 auto;padding:80px 0 0}
-h2{font-size:3em;color:#FBB100;margin:0 0 20px}
-h3{font-size:2em;color:#FBB100;margin:20px 0}
-section{width:48%;float:right;margin:0 0 35px}
-section:first-child{float:left}
-section p{font-size:1.8em;line-height:140%;color:#777;margin:0 0 15px}
-section p strong{font-style:italic}
-section p a{color:#3C5C9A}
-footer{height:100px;background-image:url(../imagens/fundo-repeticao.gif);clear:both;box-shadow:inset 0 5px 20px #CCC}
-ol li{position:relative;border-bottom:1px dashed #FCB817;margin:0 0 22px;padding:20px 31px 22px 0}
-ol li.semborda{border:none}
-ol a{text-decoration:none}
-ol li a:hover:after,ol li a:focus:after{content:'»';font-size:5em;color:#3C5C9A;position:absolute;right:0;top:14px}
-ol h2{font-size:4em;color:#3C5C9A;margin:0 0 7px}
-ol h2.naoencontrado{color:#777;font-size:3.2em}
-ol h2.naoencontrado strong{display:block;font-style:italic;line-height:120%;font-size:1.4em;color:#3C5C9A}
-ol p{font-size:1.8em;color:#777;line-height:120%}
-ol p.reclamacoes{position:absolute;top:0;color:#3C5C9A}
-.paginacao{text-align:center;padding:20px 0 50px}
-.paginacao li{display:inline-block}
-.paginacao a{display:block;font-size:2.4em;color:#3C5C9A;text-decoration:none;width:38px;height:38px;line-height:37px;border-radius:5px;position:relative}
-.paginacao a span{position:absolute;top:0;left:0;display:block;text-indent:-9999px}
-.paginacao li.anterior a{width:auto;margin:0 20px 0 0;padding:0 5px}
-.paginacao li.proxima a{width:auto;margin:0 0 0 20px;padding:0 5px}
-article.ajuda{width:960px;margin:0 auto;padding:35px 0 0}
-article.ajuda section{float:none;width:auto}
-article.ajuda h1{background:none;font-size:4.5em;color:#8DC63F;text-align:center;margin:0 0 25px}
-article.ajuda nav{margin:0 0 35px}
-article.ajuda nav a{font-size:1.2em;color:#39599E}
-article.ajuda th,article.ajuda td,article.ajuda li{font-size:1.8em;line-height:140%;color:#777;text-align:left;margin:0 0 15px}
-article.ajuda tr{border-bottom:1px dashed #CCC;padding:7px 0}
-article.ajuda th{font-weight:700}
-article.ajuda tr th:first-child,article.ajuda tr td:first-child{width:40px;padding:0 40px 0 0}
-article.ajuda td{padding:10px 40px 0 0}
-article.ajuda li{font-style:italic;font-size:1.65em;padding:0 0 0 12px}
-article.ajuda li:before{content:'- '}
-.paginacao a:hover,.paginacao a:focus,.paginacao a.ativo{color:#FFF;background-color:#3C5C9A}
-.textocentro,article.ajuda tr td:first-child{text-align:center}
-@media screen and max-width1199px {
-.wrap{width:980px}
-form.wrap{width:960px}
-input{width:958px}
-button{padding:0 10px}
-h2{font-size:2.6em}
-}
-@media screen and max-width979px {
-header p{width:92%}
-form.wrap{width:94%}
-input{width:99%}
-button{margin:-56px 1.1% 0 0}
-section p{font-size:1.8em}
-.wrap,.conteudo,article.ajuda{width:98%}
-}
-@media screen and max-width 640px {
-header{background-position:0 -26px;padding:0 0 40px}
-header h1{width:233px;height:70px;background-position:center center;background-size:223px 50px}
-h1 a{width:233px;height:70px}
-header a.ajuda{height:70px;background-size:40px 40px}
-header p{width:100%;font-size:1.8em;padding:10px 0}
-input{height:40px;font-size:1.6em;text-align:left}
-button{width:34px;height:34px;background-image:url(../imagens/fundo-botao-busca.png);background-repeat:no-repeat;background-position:center center;background-size:34px 34px;text-indent:-99999px;margin:-39px 1.3% 0 0}
-.conteudo{padding:20px 0 0}
-section p{font-size:1.8em}
-section{width:100%;float:none;margin:0 0 35px}
-ol h2{font-size:3em;color:#3C5C9A;margin:0 0 7px}
-ol p{font-size:1.6em;color:#777}
-ol li{padding:20px 0 22px}
-ol li a:hover:after,ol li a:focus:after{display:none}
-.paginacao li.anterior a,.paginacao li.proxima a{width:38px;text-align:center;background-color:red;background-repeat:no-repeat;background-position:center center;background-size:38px 38px;text-indent:-9999px;padding:0}
-.paginacao li.anterior a{background-image:url(../imagens/paginacao-anterior.png);margin:0 7px 0 0}
-.paginacao li.proxima a{background-image:url(../imagens/paginacao-proxima.png);margin:0 0 0 7px}
-article.ajuda h1{width:auto;height:auto;font-size:3.6em}
-}
-@media screen and -webkit-min-device-pixel-ratio 15,min-device-pixel-ratio 15 {
-header a.ajuda{background-image:url(../imagens/fundo-ajuda@2x.png)}
-header h1{background-image:url(../imagens/logo-principal@2x.png)}
-button{background-image:url(../imagens/fundo-botao-busca@2x.png)}
-.paginacao li.anterior a{background-image:url(../imagens/paginacao-anterior@2x.png)}
-.paginacao li.proxima a{background-image:url(../imagens/paginacao-proxima@2x.png)}
-}
-@media screen and min-width 640px {
-button,.paginacao li.anterior a,.paginacao li.proxima a{background-image:none}
-}
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}body{font-family:"Maven Pro",sans-serif;font-size:10px}header{background-image:url(../imagens/fundo-topo.jpg);background-repeat:repeat-x;background-position:0 0;padding:0 0 40px 0}.resultados header{padding:0 0 50px 0}header h1,header a.logo{display:block;background-image:url(../imagens/logo-principal.png);background-repeat:no-repeat;background-position:0 5px;background-size:384px 86px;height:96px;text-indent:-9999px}h1 a{display:block;width:384px;height:96px}header p{width:760px;margin:0 auto;text-align:center;font-size:2em;color:#777;line-height:120%;padding:30px 0}header a.ajuda{display:block;width:50px;height:96px;background-image:url(../imagens/fundo-ajuda.png);background-repeat:no-repeat;background-position:center center;background-size:50px 50px;position:absolute;right:0;top:0;text-indent:-9999px}.wrap{width:1200px;margin:0 auto;position:relative}form.wrap{width:1180px;border:10px solid #FFF;border-radius:10px;margin:-40px auto 0 auto}label{display:block;text-indent:-9999px;height:0}input{border:2px solid #4666a3;border-radius:10px;display:block;width:1176px;height:58px;margin:0 auto;font-size:2.8em;color:#3b5b9e;text-align:center;background-color:#FFF;padding:0;position:relative;z-index:1}button{float:right;margin:-56px 6px 0 0;height:50px;border:0;background:#fbb100;color:#FFF;font-size:2.4em;border-radius:7px;padding:0 15px;position:relative;z-index:2}.conteudo{display:block;padding:80px 0 0 0;width:960px;margin:0 auto}h2{font-size:3em;color:#fbb100;margin:0 0 20px 0}h3{font-size:2em;color:#fbb100;margin:20px 0}section{width:48%;float:right;margin:0 0 35px 0}section:first-child{float:left}section p{font-size:1.8em;line-height:140%;color:#777;margin:0 0 15px 0}section p strong{font-style:italic}section p a{color:#3c5c9a}footer{height:100px;background-image:url(../imagens/fundo-repeticao.gif);clear:both;box-shadow:inset 0 5px 20px #CCC}ol li{position:relative;border-bottom:1px dashed #fcb817;padding:20px 31px 22px 0;margin:0 0 22px 0}ol li.semborda{border:0}ol a{text-decoration:none}ol li a:hover:after,ol li a:focus:after{content:'»';font-size:5em;color:#3c5c9a;position:absolute;right:0;top:14px}ol h2{font-size:4em;color:#3c5c9a;margin:0 0 7px 0}ol h2.naoencontrado{color:#777;font-size:3.2em}ol h2.naoencontrado strong{display:block;font-style:italic;line-height:120%;font-size:1.4em;color:#3c5c9a}ol p{font-size:1.8em;color:#777;line-height:120%}ol p.reclamacoes{position:absolute;top:0;color:#3c5c9a}.paginacao{text-align:center;padding:20px 0 50px 0}.paginacao li{display:inline-block}.paginacao a{display:block;font-size:2.4em;color:#3c5c9a;text-decoration:none;width:38px;height:38px;line-height:37px;border-radius:5px;position:relative}.paginacao a span{position:absolute;top:0;left:0;display:none;display:block;text-indent:-9999px}.paginacao li.anterior a{margin:0 20px 0 0;width:auto;padding:0 5px}.paginacao li.proxima a{margin:0 0 0 20px;width:auto;padding:0 5px}.paginacao a:hover,.paginacao a:focus{color:#FFF;background-color:#3c5c9a}.paginacao a.ativo{color:#FFF;background-color:#3c5c9a}.textocentro{text-align:center}article.ajuda{padding:35px 0 0 0;width:960px;margin:0 auto}article.ajuda section{float:none;width:auto}article.ajuda h1{background:0;font-size:4.5em;color:#8dc63f;text-align:center;margin:0 0 25px 0}article.ajuda nav{margin:0 0 35px 0}article.ajuda nav a{font-size:1.2em;color:#39599e}article.ajuda th,article.ajuda td,article.ajuda li{font-size:1.8em;line-height:140%;color:#777;margin:0 0 15px 0;text-align:left}article.ajuda tr{border-bottom:1px dashed #CCC;padding:7px 0}article.ajuda th{font-weight:bold}article.ajuda tr th:first-child,article.ajuda tr td:first-child{width:40px;padding:0 40px 0 0}article.ajuda tr td:first-child{text-align:center}article.ajuda td{padding:10px 40px 0 0}article.ajuda li{font-style:italic;padding:0 0 0 12px;font-size:1.65em}article.ajuda li:before{content:'- '}@media screen and (max-width:1199px){.wrap{width:980px}form.wrap{width:960px}input{width:958px}button{padding:0 10px}h2{font-size:2.6em}}@media screen and (max-width:979px){.wrap{width:98%}.conteudo{width:98%}header p{width:92%}form.wrap{width:94%}input{width:99%}button{margin:-56px 1.1% 0 0}section p{font-size:1.8em}article.ajuda{width:98%}}@media screen and (max-width:640px){header{background-position:0 -26px;padding:0 0 40px 0}header h1{width:233px;height:70px;background-position:center center;background-size:223px 50px}h1 a{width:233px;height:70px}header a.ajuda{height:70px;background-size:40px 40px}header p{width:100%;font-size:1.8em;padding:10px 0}input{height:40px;font-size:1.6em;text-align:left}button{width:34px;height:34px;background-image:url(../imagens/fundo-botao-busca.png);background-repeat:no-repeat;background-position:center center;background-size:34px 34px;text-indent:-99999px;margin:-39px 1.3% 0 0}.conteudo{padding:20px 0 0 0}section p{font-size:1.8em}section{width:100%;float:none;margin:0 0 35px 0}ol h2{font-size:3em;color:#3c5c9a;margin:0 0 7px 0}ol p{font-size:1.6em;color:#777}ol li{padding:20px 0 22px 0}ol li a:hover:after,ol li a:focus:after{display:none}.paginacao li.anterior a,.paginacao li.proxima a{width:38px;text-align:center;background-color:#F00;padding:0;background-repeat:no-repeat;background-position:center center;background-size:38px 38px;text-indent:-9999px}.paginacao li.anterior a{background-image:url(../imagens/paginacao-anterior.png);margin:0 7px 0 0}.paginacao li.proxima a{background-image:url(../imagens/paginacao-proxima.png);margin:0 0 0 7px}article.ajuda h1{width:auto;height:auto;font-size:3.6em}}@media screen and (-webkit-min-device-pixel-ratio :1.5),(min-device-pixel-ratio :1.5){header a.ajuda{background-image:url(../imagens/fundo-ajuda@2x.png)}header h1{background-image:url(../imagens/logo-principal@2x.png)}button{background-image:url(../imagens/fundo-botao-busca@2x.png)}.paginacao li.anterior a{background-image:url(../imagens/paginacao-anterior@2x.png)}.paginacao li.proxima a{background-image:url(../imagens/paginacao-proxima@2x.png)}}@media screen and (min-width:640px){button{background-image:none}.paginacao li.anterior a{background-image:none}.paginacao li.proxima a{background-image:none}}
